# azentiq_memory_manager_andrew-fork

./: .coverage  README.md  UserGuide.md  adapter_test_results.txt  adk_github_import_results.txt  adk_github_import_test.py  adk_import_test.py  adk_inspect.py  adk_inspection_results.txt  adk_structure_verify.txt  adk_verify_results.txt  architecture.md  azentiq_memory_manager_whitepaper.md  clean_redis.py  clean_redis_specific.py  conftest.py  debug_test.py  error_log.txt  event_test_results.txt  focused_adk_test.py  github_adk_test_results.txt  inspect_memory.py  inspect_memory_detailed.py  inspect_sessions.py  pyproject.toml  pytest.ini  real_adk_github_test_results.txt  real_adk_test_results.txt  redis_dump.py  requirements.txt  run_api_service.bat  run_single_test.py  run_tests.py  session_analysis.py  simple_adk_test.py  simple_adk_test_results.txt  test_generate_prompt_fixed.py  test_helper.py  test_output.txt  verify_adk_import.py  (+1 more)
adapters/: ADKAdapter_readme.md  adk_adapter.py  langchain_adapter.py  langgraph_adapter.py
cli/: main.py
core/: interfaces.py  long_term.py  memory_manager.py  short_term.py  working_memory.py
docs/: ADK_Integration_Architecture.md  README.md
examples/: memory_config_example.yaml
progression/: __init__.py  engine.py  registry.py  rule.py
services/: README.md  check_redis_keys.py  endpoint_test.py  pythonpath_helper.py  run_api.py  simple_test.py  test_api.py
storage/: in_memory.py  redis_store.py  sqlite_store.py  vector_store.py
tests/: test_memory_manager.bak  test_memory_manager.py
utils/: __init__.py  (+3 more)
(+85 files in other folders)
