[tool.poetry]
name = "memory-manager"
version = "0.1.0"
description = "Tiered memory management framework for AI agents"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
chromadb = "^0.4.0"
duckdb = "^0.9.2"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
